fix(pr-z-index of local nav & nav): an element was covered unexpectedly

--- a/packages/valaxy-theme-press/styles/css-vars.scss
+++ b/packages/valaxy-theme-press/styles/css-vars.scss
@@ -21,8 +21,8 @@
 
   // z-index
   --va-z-overlay: var(--pr-z-index-backdrop);
-  --pr-z-index-nav: 8;
-  --pr-z-index-local-nav: 9;
+  --pr-z-index-local-nav: 8;
+  --pr-z-index-nav: 9;
   --pr-z-index-backdrop: 10;
   --pr-z-index-sidebar: 11;
 
